--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,8 @@
 {
-  "name": "HelloIonic",
+  "name": "Level",
   "private": "true",
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.0.0-beta.6"
   },
-  "dependencies": {
-    "momentjs": "~2.6.0"
-  }
+  "dependencies": {}
 }
